# cmake-models-link

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Model1/: CMakeLists.txt  helloM1.cpp  helloM1.h
Model1/lib/: Model1.lib
Model2/: CMakeLists.txt  helloM2.cpp  helloM2.h
lib/: Model2.lib
