CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS On)

PROJECT (MyTest1)

SET(CMAKE_BUILD_TYPE Release)

INCLUDE_DIRECTORIES(include)
LINK_DIRECTORIES(lib)

FILE(GLOB SOURCES "./*.cpp")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

ADD_EXECUTABLE(MyTest1 ${SOURCES})
TARGET_LINK_LIBRARIES(MyTest1 Model1.lib)
TARGET_LINK_LIBRARIES(MyTest1 Model2.lib)

SET_TARGET_PROPERTIES(${prj_target} PROPERTIES FOLDER "test") 
